# interactiveMap

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
assets/: styles.css
components/: __init__.py  navbar.py
data/: countries.csv  india.csv  math.csv  quiz_database.db  wonders.csv  world_physical_geography.csv
pages/: __init__.py  explore.py  trivia.py
pages/analytics/: __init__.py  callbacks.py  layouts.py
pages/explore/: __init__.py  callbacks.py  layouts.py  map_components.py  table_components.py
pages/geography/: __init__.py  callbacks.py  layouts.py
pages/history/: __init__.py  callbacks.py  layouts.py
pages/mathematics/: __init__.py  callbacks.py  layouts.py
pages/science/: __init__.py  callbacks.py  layouts.py
pages/sports/: __init__.py  callbacks.py  layouts.py
pages/trivia/: README.md  __init__.py  callbacks.py  components.py  layouts.py  quiz_components.py  quiz_data.py  ui_components.py  universal_callbacks.py
tests/uitests/: README.md  __init__.py  conftest.py  playwright.config.py  run_tests.py  test_category_validation.py
tests/unit/utils/: test_quiz_generators.py
utils/: __init__.py  data_processing.py  database_utils.py  datetime_utils.py  math_quiz_generators.py  quiz_generators.py  quiz_stats.py
