[project]
name = "interactive-map-app"
version = "0.2.0"
description = "A simple interactive world map with Dash and Plotly."
dependencies = [
    "dash",
    "pandas",
    "plotly"
]
[tool.pytest.ini_options]
# Look for tests in the 'tests' directory
testpaths = ["tests"]

# Tell pytest where to find your app's source code
pythonpath = ["."]

# Add common options, e.g., show a short summary for test results
addopts = "-ra"